--- a/HW4/ml_hw4.ipynb
+++ b/HW4/ml_hw4.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-05-06T07:49:49.228862Z",
-     "start_time": "2018-05-06T07:49:48.784660Z"
+     "end_time": "2018-05-07T09:54:23.939277Z",
+     "start_time": "2018-05-07T09:54:23.557262Z"
     }
    },
    "outputs": [],
@@ -40,8 +40,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-05-06T07:49:49.231870Z",
-     "start_time": "2018-05-06T07:49:49.229865Z"
+     "end_time": "2018-05-07T09:54:23.942285Z",
+     "start_time": "2018-05-07T09:54:23.939277Z"
     }
    },
    "outputs": [],
@@ -56,8 +56,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-05-06T07:49:49.240895Z",
-     "start_time": "2018-05-06T07:49:49.232874Z"
+     "end_time": "2018-05-07T09:54:23.951309Z",
+     "start_time": "2018-05-07T09:54:23.943288Z"
     }
    },
    "outputs": [],
@@ -75,8 +75,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-05-06T07:49:49.246912Z",
-     "start_time": "2018-05-06T07:49:49.241897Z"
+     "end_time": "2018-05-07T09:54:23.957326Z",
+     "start_time": "2018-05-07T09:54:23.952312Z"
     }
    },
    "outputs": [],
@@ -92,8 +92,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-05-06T07:49:49.254932Z",
-     "start_time": "2018-05-06T07:49:49.247913Z"
+     "end_time": "2018-05-07T09:54:23.964344Z",
+     "start_time": "2018-05-07T09:54:23.958328Z"
     }
    },
    "outputs": [
@@ -133,8 +133,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-05-06T07:49:49.259945Z",
-     "start_time": "2018-05-06T07:49:49.255934Z"
+     "end_time": "2018-05-07T09:54:23.970360Z",
+     "start_time": "2018-05-07T09:54:23.965347Z"
     }
    },
    "outputs": [],
@@ -148,8 +148,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-05-06T07:49:49.265962Z",
-     "start_time": "2018-05-06T07:49:49.260948Z"
+     "end_time": "2018-05-07T09:54:23.976376Z",
+     "start_time": "2018-05-07T09:54:23.971363Z"
     }
    },
    "outputs": [],
@@ -163,8 +163,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-05-06T07:49:49.272980Z",
-     "start_time": "2018-05-06T07:49:49.266964Z"
+     "end_time": "2018-05-07T09:54:23.983395Z",
+     "start_time": "2018-05-07T09:54:23.977379Z"
     }
    },
    "outputs": [],
@@ -185,8 +185,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-05-06T07:49:49.278996Z",
-     "start_time": "2018-05-06T07:49:49.273983Z"
+     "end_time": "2018-05-07T09:54:23.990414Z",
+     "start_time": "2018-05-07T09:54:23.984397Z"
     }
    },
    "outputs": [
@@ -210,8 +210,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-05-06T07:49:49.378264Z",
-     "start_time": "2018-05-06T07:49:49.280000Z"
+     "end_time": "2018-05-07T09:54:24.087673Z",
+     "start_time": "2018-05-07T09:54:23.991416Z"
     }
    },
    "outputs": [
@@ -284,8 +284,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-05-06T07:49:49.386286Z",
-     "start_time": "2018-05-06T07:49:49.379268Z"
+     "end_time": "2018-05-07T09:54:24.097699Z",
+     "start_time": "2018-05-07T09:54:24.088676Z"
     }
    },
    "outputs": [
@@ -321,8 +321,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-05-06T07:49:49.389294Z",
-     "start_time": "2018-05-06T07:49:49.387289Z"
+     "end_time": "2018-05-07T09:54:24.107725Z",
+     "start_time": "2018-05-07T09:54:24.098703Z"
     }
    },
    "outputs": [],
@@ -336,68 +336,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-05-06T07:49:49.395813Z",
-     "start_time": "2018-05-06T07:49:49.390297Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# iris_X = iris_X[[0, 1, 2, 50, 51, 52], :]\n",
-    "# iris_y = iris_y[[0, 1, 2, 50, 51, 52], :]\n",
-    "# iris_y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-05-06T07:49:49.401328Z",
-     "start_time": "2018-05-06T07:49:49.396816Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "X = np.array([[0, 0], [0, 1], [1, 0], [1, 1]])\n",
-    "y = np.array([0, 1, 1, 0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-05-06T07:49:49.409353Z",
-     "start_time": "2018-05-06T07:49:49.402331Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1.03128222, 1.97290909, 1.        ]])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.random.seed(42)\n",
-    "W = np.random.random((2, 3, 3))\n",
-    "a = np.array([[1, 1, 1]]).dot(W[0, :, :])\n",
-    "a[:, -1] = 1\n",
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-05-06T07:49:49.463496Z",
-     "start_time": "2018-05-06T07:49:49.410355Z"
+     "end_time": "2018-05-07T09:54:24.163875Z",
+     "start_time": "2018-05-07T09:54:24.108728Z"
     },
     "code_folding": []
    },
@@ -450,11 +390,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-05-06T07:49:50.066124Z",
-     "start_time": "2018-05-06T07:49:49.464499Z"
+     "end_time": "2018-05-07T09:54:24.236067Z",
+     "start_time": "2018-05-07T09:54:24.164878Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.94"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = NN()\n",
+    "model.fit(iris_X - np.mean(iris_X, axis=0), iris_y)\n",
+    "model.score(iris_X - np.mean(iris_X, axis=0), iris_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-05-07T09:54:24.670221Z",
+     "start_time": "2018-05-07T09:54:24.237070Z"
     },
     "scrolled": false
    },
