--- a/HW5/ml_hw5.ipynb
+++ b/HW5/ml_hw5.ipynb
@@ -1,12 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 103590450 四資四 馬茂源"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-05-22T15:58:02.105490Z",
-     "start_time": "2018-05-22T15:58:00.098127Z"
+     "end_time": "2018-05-23T01:24:54.506114Z",
+     "start_time": "2018-05-23T01:24:52.429775Z"
     }
    },
    "outputs": [],
@@ -82,11 +89,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-05-22T15:58:59.774526Z",
-     "start_time": "2018-05-22T15:58:59.753470Z"
+     "end_time": "2018-05-23T01:24:54.524163Z",
+     "start_time": "2018-05-23T01:24:54.506114Z"
     }
    },
    "outputs": [
@@ -103,7 +110,7 @@
        "array(['setosa', 'versicolor', 'virginica'], dtype='<U10')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,11 +126,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-05-22T15:59:03.653376Z",
-     "start_time": "2018-05-22T15:59:03.651370Z"
+     "end_time": "2018-05-23T01:24:54.527171Z",
+     "start_time": "2018-05-23T01:24:54.525166Z"
     }
    },
    "outputs": [],
@@ -134,21 +141,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-05-22T17:17:43.269326Z",
-     "start_time": "2018-05-22T17:17:43.207161Z"
+     "end_time": "2018-05-23T01:25:53.061351Z",
+     "start_time": "2018-05-23T01:25:52.997180Z"
     }
    },
    "outputs": [],
    "source": [
     "class NN:\n",
-    "    def __init__(self, n_epoch=50):\n",
+    "    def __init__(self, n_epoch=60):\n",
     "        np.random.seed(40)\n",
     "        self.W = np.random.random((2, 2, 2))\n",
     "        self.n_epoch = n_epoch\n",
-    "        self.lr = 0.2\n",
+    "        self.lr = 0.09\n",
     "        self.enc = preprocessing.OneHotEncoder()\n",
     "        \n",
     "    def _sigmoid(self, x):\n",
@@ -196,11 +203,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-05-22T17:16:59.076046Z",
-     "start_time": "2018-05-22T17:16:59.073038Z"
+     "end_time": "2018-05-23T01:25:54.118458Z",
+     "start_time": "2018-05-23T01:25:54.116453Z"
     }
    },
    "outputs": [],
@@ -211,11 +218,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-05-22T17:17:44.332483Z",
-     "start_time": "2018-05-22T17:17:44.226474Z"
+     "end_time": "2018-05-23T01:25:54.903391Z",
+     "start_time": "2018-05-23T01:25:54.782338Z"
     },
     "scrolled": true
    },
@@ -226,7 +233,7 @@
        "0.96"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,11 +246,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-05-22T17:17:45.703875Z",
-     "start_time": "2018-05-22T17:17:45.008109Z"
+     "end_time": "2018-05-23T01:25:57.776267Z",
+     "start_time": "2018-05-23T01:25:56.969176Z"
     }
    },
    "outputs": [
@@ -283,23 +290,118 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "trainable weights: (5x5+1)x6=156\n",
+    "\n",
+    "connections: (5x5+1)x6x28x28=122304"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "5 .\tAssuming that the following is a part of convolution neural networks. Compute the resultant values (size of 3x3) if it has two input planes, stride of one, no zero-padding, and using the ReLU activation function.\n",
     "![](3.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 25,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-05-23T02:10:06.678877Z",
+     "start_time": "2018-05-23T02:10:06.672862Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "k = np.array([[[3, 0], [-1, -1], [2, 0]], \n",
+    "               [[-2, -1], [1, 6], [-3, -1]], \n",
+    "               [[-2, 0], [0, -1], [3, 0]]])\n",
+    "\n",
+    "p = np.array([[[6, 3], [0, 1], [-4, -4], [0, 0], [1, -1]], \n",
+    "              [[4, 3], [4, 0], [0, 3], [2, 4], [1, -1]], \n",
+    "              [[3, 3], [-7, 7], [1, -2], [4, -2], [2, 2]], \n",
+    "              [[-2, -5], [2, -2], [1, 2], [-4, 0], [2, -2]], \n",
+    "              [[5, 2], [1, 1], [2, -1], [4, 1], [-1, 2]]])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 58,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-05-23T02:29:47.876125Z",
+     "start_time": "2018-05-23T02:29:47.873118Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "nf = 1  # number of filters\n",
+    "rf = 3  # filter size\n",
+    "s = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-05-23T02:36:31.077591Z",
+     "start_time": "2018-05-23T02:36:31.075586Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "out = np.zeros((h_range, h_range))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-05-23T02:37:16.939435Z",
+     "start_time": "2018-05-23T02:37:16.934421Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for z in range(nf):\n",
+    "    h_range = int((p.shape[1] - rf) / s) + 1  # (W - F + 2P) / S\n",
+    "    for _h in range(h_range):\n",
+    "        w_range = int((p.shape[0] - rf) / s) + 1  # (W - F + 2P) / S\n",
+    "        for _w in range(w_range):\n",
+    "            # print(_h, _w)\n",
+    "            # print(np.sum((p[_h:_h+rf, _w:_w+rf, :]*k[:, :, :])))\n",
+    "            out[_h:, _w] = np.maximum((np.sum((p[_h:_h+rf, _w:_w+rf, :]*k[:, :, :]))), 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-05-23T02:37:17.835418Z",
+     "start_time": "2018-05-23T02:37:17.832410Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0., 36., 17.],\n",
+       "       [42.,  0.,  0.],\n",
+       "       [ 0., 22.,  0.]])"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out"
+   ]
   },
   {
    "cell_type": "code",
@@ -347,13 +449,18 @@
   },
   "toc": {
    "nav_menu": {},
-   "number_sections": true,
+   "number_sections": false,
    "sideBar": true,
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "307px"
+   },
    "toc_section_display": true,
    "toc_window_display": false
   }
