--- a/HW6/ml_hw6.ipynb
+++ b/HW6/ml_hw6.ipynb
@@ -9,16 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-06-18T16:35:59.133345Z",
-     "start_time": "2018-06-18T16:35:59.131340Z"
+     "end_time": "2018-06-19T02:56:42.682567Z",
+     "start_time": "2018-06-19T02:56:42.680561Z"
     }
    },
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "from cvxopt import matrix, solvers"
    ]
   },
   {
@@ -92,10 +93,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-06-19T03:08:26.127626Z",
+     "start_time": "2018-06-19T03:08:26.125620Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "P = matrix([[2., 0], [0., 2.]])\n",
+    "q = matrix([-1., -1.])\n",
+    "A = matrix([[2., 0], [0., 2.]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-06-19T03:08:28.070833Z",
+     "start_time": "2018-06-19T03:08:28.068827Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "sol = solvers.qp(P, q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-06-19T03:12:58.765004Z",
+     "start_time": "2018-06-19T03:12:58.763000Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 5.00e-01]\n",
+      "[ 5.00e-01]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sol['x'])"
+   ]
   },
   {
    "cell_type": "markdown",
