--- a/HW6/ml_hw6.ipynb
+++ b/HW6/ml_hw6.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-06-19T02:56:42.682567Z",
-     "start_time": "2018-06-19T02:56:42.680561Z"
+     "end_time": "2018-06-19T06:55:42.823825Z",
+     "start_time": "2018-06-19T06:55:42.821180Z"
     }
    },
    "outputs": [],
@@ -93,27 +93,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-06-19T03:08:26.127626Z",
-     "start_time": "2018-06-19T03:08:26.125620Z"
+     "end_time": "2018-06-19T06:55:42.980017Z",
+     "start_time": "2018-06-19T06:55:42.971553Z"
     }
    },
    "outputs": [],
    "source": [
     "P = matrix([[2., 0], [0., 2.]])\n",
-    "q = matrix([-1., -1.])\n",
-    "A = matrix([[2., 0], [0., 2.]])"
+    "q = matrix([-1., -1.])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-06-19T03:08:28.070833Z",
-     "start_time": "2018-06-19T03:08:28.068827Z"
+     "end_time": "2018-06-19T06:55:42.986565Z",
+     "start_time": "2018-06-19T06:55:42.982489Z"
     }
    },
    "outputs": [],
@@ -123,11 +122,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-06-19T03:12:58.765004Z",
-     "start_time": "2018-06-19T03:12:58.763000Z"
+     "end_time": "2018-06-19T06:55:42.994365Z",
+     "start_time": "2018-06-19T06:55:42.989190Z"
     }
    },
    "outputs": [
@@ -154,6 +153,105 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-06-19T06:55:43.050811Z",
+     "start_time": "2018-06-19T06:55:43.010320Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "π: [1.0, 0.0, 0.0]\n",
+      "A: [[0.0, 0.0, 1.0], [0.0, 0.0, 1.0], [0.0, 1.0, 0.0]]\n",
+      "B: [[1.0, 0.0], [0.0, 1.0], [1.0, 0.0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = 3\n",
+    "O = [0,0,1,0,1]\n",
+    "A = [[1/3, 1/3, 1/3], [1/3, 1/3, 1/3], [1/3, 1/3, 1/3]]\n",
+    "pi = [1/3, 1/3, 1/3]\n",
+    "B = [[4/6, 2/6], [2/6, 4/6], [3/6, 3/6]]\n",
+    "symbols = [0, 1]\n",
+    "\n",
+    "def forward(N, O, pi, A, B):\n",
+    "    fwd = [{}]     \n",
+    "    for i in range(N):\n",
+    "        fwd[0][i] = pi[i] * B[i][O[0]]\n",
+    "    for t in range(1, len(O)):\n",
+    "        fwd.append({})     \n",
+    "        for j in range(N):\n",
+    "            fwd[t][j] = sum((fwd[t-1][i] *\n",
+    "                             A[i][j] * \n",
+    "                             B[j][O[t]]) for i in range(N))\n",
+    "            \n",
+    "    prob = sum((fwd[len(O) - 1][i]) for i in range(N))\n",
+    "    return prob, fwd\n",
+    "\n",
+    "def backward(N, O, A, B):\n",
+    "    T = len(O)\n",
+    "    bwk = [{} for t in range(T)]\n",
+    "    for i in range(N):\n",
+    "        bwk[T-1][i] = 1 \n",
+    "    for t in reversed(range(T-1)):\n",
+    "        for i in range(N):\n",
+    "            bwk[t][i] = sum((bwk[t+1][j] * A[i][j] * \n",
+    "                             B[j][O[t+1]]) for j in range(N))\n",
+    "    prob = sum((pi[i]* B[i][O[0]] * \n",
+    "                bwk[0][i]) for i in range(N))\n",
+    "    return prob, bwk\n",
+    "\n",
+    "def train(N, O, pi, A, B, symbols):\n",
+    "    T = len(O)\n",
+    "    gamma = [{} for t in range(T)]\n",
+    "    zi = [{} for t in range(T - 1)] \n",
+    "    p_o, fwd = forward(N, O, pi, A, B)\n",
+    "    _, bwk = backward(N, O, A, B)\n",
+    "    \n",
+    "    for t in range(T):\n",
+    "        for i in range(N):\n",
+    "            gamma[t][i] = (fwd[t][i] * bwk[t][i]) / p_o\n",
+    "            if t == 0:\n",
+    "                pi[i] = gamma[t][i]\n",
+    "            if t == T - 1:\n",
+    "                continue\n",
+    "            zi[t][i] = {}\n",
+    "            for j in range(N):\n",
+    "                zi[t][i][j] = (fwd[t][i] * A[i][j] * \n",
+    "                B[j][O[t + 1]] * bwk[t + 1][j] / p_o)\n",
+    "    \n",
+    "\n",
+    "    for i in range(N):\n",
+    "        for j in range(N):\n",
+    "            val = sum([zi[t][i][j] for t in range(T - 1)]) \n",
+    "            val /= sum([gamma[t][i] for t in range(T - 1)])\n",
+    "            A[i][j] = val\n",
+    "            \n",
+    "    for i in range(N):\n",
+    "        for k in symbols:\n",
+    "            val = 0.0\n",
+    "            for t in range(T):\n",
+    "                if O[t] == k:\n",
+    "                    val += gamma[t][i]                 \n",
+    "            val /= sum([gamma[t][i] for t in range(T)])\n",
+    "            B[i][k] = val\n",
+    "    return pi, A, B\n",
+    "\n",
+    "for iter_ in range(100):\n",
+    "    pi, A, B = train(N, O, pi, A, B, symbols)\n",
+    "    \n",
+    "print('π:', pi)\n",
+    "print('A:', A)\n",
+    "print('B:', B)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -162,11 +260,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-06-18T16:44:02.491310Z",
-     "start_time": "2018-06-18T16:44:02.488303Z"
+     "end_time": "2018-06-19T06:55:43.056234Z",
+     "start_time": "2018-06-19T06:55:43.053108Z"
     }
    },
    "outputs": [],
@@ -176,11 +274,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-06-18T16:44:03.006699Z",
-     "start_time": "2018-06-18T16:44:03.002688Z"
+     "end_time": "2018-06-19T06:55:43.063018Z",
+     "start_time": "2018-06-19T06:55:43.058848Z"
     }
    },
    "outputs": [],
@@ -193,11 +291,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-06-18T16:44:03.530986Z",
-     "start_time": "2018-06-18T16:44:03.523968Z"
+     "end_time": "2018-06-19T06:55:43.077021Z",
+     "start_time": "2018-06-19T06:55:43.065341Z"
     }
    },
    "outputs": [],
@@ -215,45 +313,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-06-18T16:44:04.267240Z",
-     "start_time": "2018-06-18T16:44:04.264232Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  6.  0.  0.  0. -4.  0.  0.  0.  1.  0.  0.]\n",
-      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  4.  0.  4.  0.  0.  0.  2.  0.  1.  0.  0.]\n",
-      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  3.  0. -7.  0.  1.  0.  4.  0.  2.  0.  0.]\n",
-      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  0. -2.  0.  2.  0.  1.  0. -4.  0.  2.  0.  0.]\n",
-      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  5.  0.  1.  0.  2.  0.  4.  0. -1.  0.  0.]\n",
-      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(p[:, :, 0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-18T16:44:06.641976Z",
-     "start_time": "2018-06-18T16:44:06.639970Z"
+     "end_time": "2018-06-19T06:55:43.082098Z",
+     "start_time": "2018-06-19T06:55:43.079254Z"
     }
    },
    "outputs": [],
@@ -263,11 +327,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-06-18T16:44:07.482022Z",
-     "start_time": "2018-06-18T16:44:07.479015Z"
+     "end_time": "2018-06-19T06:55:43.087592Z",
+     "start_time": "2018-06-19T06:55:43.084505Z"
     }
    },
    "outputs": [],
@@ -279,11 +343,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-06-18T16:44:07.988613Z",
-     "start_time": "2018-06-18T16:44:07.982597Z"
+     "end_time": "2018-06-19T06:55:43.096172Z",
+     "start_time": "2018-06-19T06:55:43.089851Z"
     }
    },
    "outputs": [],
@@ -300,11 +364,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-06-18T16:44:08.694909Z",
-     "start_time": "2018-06-18T16:44:08.690899Z"
+     "end_time": "2018-06-19T06:55:43.105657Z",
+     "start_time": "2018-06-19T06:55:43.098460Z"
     }
    },
    "outputs": [
@@ -324,7 +388,7 @@
        "       [10.,  0., 17.,  0.,  7.,  0., 14.,  0., 10.,  1.,  0.]])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -393,6 +457,35 @@
    },
    "toc_section_display": true,
    "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
